--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 }
 
 body {
-    background-color: #36393f !important;
+    background-color: #36393f;
 }
 
 .formulaire {
     background-color:whitesmoke;
     width: 400px;
-    height: 400px;
+    height: 500px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -53,4 +53,10 @@ table{
   table th {
     padding-top: 12px;
     padding-bottom: 12px;
+  }
+
+  .produit {
+    width: 100%;
+    color: whitesmoke;
+    text-align: center;
   }
